err/pyrrhic.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pyrrhic-1.0.egg-info'...
Listing './lib/python3.5/site-packages/frame_hack'...
Compiling './lib/python3.5/site-packages/frame_hack/context_manager.py'...
***   File "./lib/python3.5/site-packages/frame_hack/context_manager.py", line 38
    self.call_re = f'{self.__class__.__name__}\((.+)\).*'
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyrrhic'...
Compiling './lib/python3.5/site-packages/pyrrhic/class_factory.py'...
***   File "./lib/python3.5/site-packages/pyrrhic/class_factory.py", line 16
    lines[idx] = f'    @{deco}\r\n'
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrrhic/decorator_repr.py'...
***   File "./lib/python3.5/site-packages/pyrrhic/decorator_repr.py", line 25
    return f'{to_repr(value)}, '
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrrhic/implementer.py'...
***   File "./lib/python3.5/site-packages/pyrrhic/implementer.py", line 14
    coro.send((f'{name}_impl', getattr(subclass, name)))
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrrhic/new_context_manager.py'...
***   File "./lib/python3.5/site-packages/pyrrhic/new_context_manager.py", line 14
    yield f'class {os.path.basename(name)}:'
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrrhic/test.py'...
***   File "./lib/python3.5/site-packages/pyrrhic/test.py", line 7
    METHODNAMES = [f'method{no}' for no in range(2)]
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
